# baumer_ox_scanner

./: CMakeLists.txt  README.md  package.xml
OxSDK_V2_0_0/: OX_Line_SDK.htm
OxSDK_V2_0_0/CSharp/: readme.txt  websocket-sharp.txt
OxSDK_V2_0_0/CSharp/OxApiExamples/: OxApiExamples.csproj  Program.cs
OxSDK_V2_0_0/CSharp/OxApiExamples/Properties/: AssemblyInfo.cs
OxSDK_V2_0_0/CSharp/OxPythonExamples/: ExampleImage.py  ExampleLoadStoreConfiguration.py  ExampleMeasurement.py  ExampleProfile.py  ExampleReadConfiguration.py  ExampleSoftwareTrigger.py  OxPythonExamples.pyproj  StreamMeasurements.py  StreamProfiles.py
OxSDK_V2_0_0/Cpp/OxApi/: readme.txt
OxSDK_V2_0_0/Cpp/OxApi/example/: CMakeLists.txt
OxSDK_V2_0_0/Cpp/OxApi/example/src/: oxapiexamples.cpp
OxSDK_V2_0_0/Cpp/OxApi/usr/include/OXApi/: Ox.h  Types.h
OxSDK_V2_0_0/Cpp/OxApi/usr/include/OXApi/Types/: DataAcquisition.h  FieldOfView.h  Image.h  Interfaces.h  MeasureValues.h  ParameterSetup.h  Profile.h  ProfileConfiguration.h  SensorInfo.h
OxSDK_V2_0_0/doc/: md_style.css
launch/: dc24_paper_launch_all.launch  pointcloud.launch  pointcloud2_ee.launch  pointcloud_assembler.launch  pointcloud_ee.launch
rviz/: scanner_mur620a.rviz
scripts/: ExampleMeasurement.py  assemble_cloud.py  assemble_cloud_from_bag.py  assemble_publish_cloud.py  fake_cloud_high_rate_publisher.py  pointCloudToPointCloud2.py  save_cloud_to_txt.py  transform_cloud_publisher.py  transform_points_from_bag.py
src/: assemble_publish_cloud.cpp  ox_scanner.cpp  pose_publisher.cpp  scanner_pointcloud.cpp  scanner_pointcloud2.cpp
(+6 files in other folders)
